--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "scripts": {
     "clean": "pnpm -r clean",
     "build": "pnpm -r build",
-    "lint": "pnpm -r lint"
+    "lint": "pnpm -r lint",
+    "migrate:sql": "bash scripts/migrate-sql-assets.sh"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
