--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "url": "https://github.com/launchql/extensions"
   },
   "license": "MIT",
+  "engines": {
+    "node": "^20 || ^18"
+  },
   "publishConfig": {
     "access": "restricted"
   },
