--- a/packages/metrics/measurements/tsconfig.json
+++ b/packages/metrics/measurements/tsconfig.json
@@ -5,5 +5,5 @@
     "rootDir": "."
   },
   "include": ["src/**/*.ts", "__tests__/**/*.ts", "__tests__/**/*.d.ts"],
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules", "__tests__"]
 }
