--- a/packages/security/ext-jwt-claims/tsconfig.json
+++ b/packages/security/ext-jwt-claims/tsconfig.json
@@ -4,6 +4,6 @@
     "outDir": "dist",
     "rootDir": "src/"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["__tests__/**/*.ts"],
   "exclude": ["dist", "node_modules", "__tests__"]
 }
