fix: update job package dependencies to use new module names
- Update database-jobs package.json dependencies from @launchql/ext-default-roles and @launchql/ext-jwt-claims to @launchql/default-roles and @launchql/jwt-claims
- Update jobs package.json dependencies similarly
- Complete the cross-package dependency updates for the MODULES.md reorganization

Co-Authored-By: Dan Lynch <pyramation@gmail.com>

--- a/packages/jobs/database-jobs/package.json
+++ b/packages/jobs/database-jobs/package.json
@@ -15,8 +15,8 @@
     "test:watch": "jest --config ./jest.config.js --watch"
   },
   "dependencies": {
-    "@launchql/ext-default-roles": "workspace:^",
-    "@launchql/ext-jwt-claims": "workspace:^"
+    "@launchql/default-roles": "workspace:^",
+    "@launchql/jwt-claims": "workspace:^"
   },
   "repository": {
     "type": "git",
