feat: add workspace-level bundle script and missing Makefiles
- Add 'bundle': 'pnpm -r bundle' script to workspace package.json
- Create missing Makefiles for 13 modules that lacked them
- Update all SQL files, control files, and Makefiles after running workspace bundle
- Workspace bundle command now successfully runs lql package on all modules

Co-Authored-By: Dan Lynch <pyramation@gmail.com>

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "packages/*"
   ],
   "scripts": {
-    "clean": "pnpm -r clean",
     "build": "pnpm -r build",
+    "bundle": "pnpm -r bundle",
+    "clean": "pnpm -r clean",
     "lint": "pnpm -r lint",
     "test": "pnpm -r test"
   },
