feat: Standardize package names to @lql-pg/<modulename> and sync control file dependencies
- Updated all package.json names to use @lql-pg/<modulename> format for consistency
- Added workspace dependencies for all control file launchql-* requirements
- Mapped control file dependencies to package.json using workspace:* protocol
- Added dependencies as regular dependencies (not devDependencies)
- Ensured all internal package references use new naming convention
- Updated pnpm-lock.yaml to reflect new dependency structure

Co-Authored-By: Dan Lynch <pyramation@gmail.com>

--- a/packages/security/jwt-claims/package.json
+++ b/packages/security/jwt-claims/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pgql/jwt-claims",
+  "name": "@lql-pg/jwt-claims",
   "version": "0.4.6",
   "description": "jwt claims",
   "publishConfig": {
@@ -14,7 +14,8 @@
     "@launchql/cli": "^4.8.0"
   },
   "dependencies": {
-    "@pgql/types": "workspace:^"
+    "@lql-pg/types": "workspace:*",
+    "@lql-pg/verify": "workspace:*"
   },
   "repository": {
     "type": "git",
