--- a/packages/data-types/types/package.json
+++ b/packages/data-types/types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pgql/types",
+  "name": "@lql-pg/types",
   "version": "0.4.6",
   "description": "types",
   "publishConfig": {
@@ -9,6 +9,9 @@
     "bundle": "lql package",
     "test": "jest --config ./jest.config.js",
     "test:watch": "jest --config ./jest.config.js --watch"
+  },
+  "dependencies": {
+    "@lql-pg/verify": "workspace:*"
   },
   "devDependencies": {
     "@launchql/cli": "^4.8.0"
