docs: update documentation across all 22 modules
- Clear all checkboxes in MODULES.md verification checklist
- Update package.json descriptions for all modules with succinct, functional descriptions
- Update README.md files for all modules with clear descriptions of package contents
- Update root README.md with LaunchQL-specific usage instructions
- Focus on package functionality rather than deploy/verify/revert mechanics
- Keep all content succinct and practical without fluff

Co-Authored-By: Dan Lynch <pyramation@gmail.com>

--- a/packages/data-types/geotypes/package.json
+++ b/packages/data-types/geotypes/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lql-pg/geotypes",
   "version": "0.4.6",
-  "description": "geotypes",
+  "description": "Geographic data types and spatial functions for PostgreSQL",
   "publishConfig": {
     "access": "public"
   },
