--- a/packages/security/jwt-claims/package.json
+++ b/packages/security/jwt-claims/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lql-pg/jwt-claims",
   "version": "0.4.6",
-  "description": "jwt claims",
+  "description": "JWT claim handling and validation functions",
   "publishConfig": {
     "access": "public"
   },
