--- a/packages/data-types/uuid/package.json
+++ b/packages/data-types/uuid/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lql-pg/uuid",
   "version": "0.4.6",
-  "description": "uuid",
+  "description": "UUID utilities and extensions for PostgreSQL",
   "publishConfig": {
     "access": "public"
   },
