--- a/packages/utils/base32/package.json
+++ b/packages/utils/base32/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lql-pg/base32",
   "version": "0.4.6",
-  "description": "base32 utilities",
+  "description": "Base32 encoding and decoding functions for PostgreSQL",
   "publishConfig": {
     "access": "public"
   },
