--- a/packages/data-types/geotypes/package.json
+++ b/packages/data-types/geotypes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lql-pg/geotypes",
+  "name": "@pgpm/geotypes",
   "version": "0.3.0",
   "description": "Geographic data types and spatial functions for PostgreSQL",
   "publishConfig": {
@@ -11,8 +11,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@lql-pg/types": "workspace:*",
-    "@lql-pg/verify": "workspace:*"
+    "@pgpm/types": "workspace:*",
+    "@pgpm/verify": "workspace:*"
   },
   "devDependencies": {
     "@launchql/cli": "^4.9.0"
