--- a/packages/data-types/types/package.json
+++ b/packages/data-types/types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lql-pg/types",
+  "name": "@pgpm/types",
   "version": "0.3.0",
   "description": "Core PostgreSQL data types with deploy/verify/revert SQL scripts",
   "publishConfig": {
@@ -11,7 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@lql-pg/verify": "workspace:*"
+    "@pgpm/verify": "workspace:*"
   },
   "devDependencies": {
     "@launchql/cli": "^4.9.0"
