--- a/packages/data-types/uuid/package.json
+++ b/packages/data-types/uuid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lql-pg/uuid",
+  "name": "@pgpm/uuid",
   "version": "0.3.0",
   "description": "UUID utilities and extensions for PostgreSQL",
   "publishConfig": {
@@ -11,7 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@lql-pg/verify": "workspace:*"
+    "@pgpm/verify": "workspace:*"
   },
   "devDependencies": {
     "@launchql/cli": "^4.9.0"
