--- a/packages/meta/db_meta_modules/package.json
+++ b/packages/meta/db_meta_modules/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lql-pg/meta-db-modules",
+  "name": "@pgpm/meta-db-modules",
   "version": "0.3.0",
   "description": "Module metadata handling and dependency tracking",
   "publishConfig": {
@@ -11,8 +11,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@lql-pg/meta-db": "workspace:*",
-    "@lql-pg/verify": "workspace:*"
+    "@pgpm/meta-db": "workspace:*",
+    "@pgpm/verify": "workspace:*"
   },
   "devDependencies": {
     "@launchql/cli": "^4.9.0"
