--- a/packages/metrics/measurements/package.json
+++ b/packages/metrics/measurements/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lql-pg/measurements",
+  "name": "@pgpm/measurements",
   "version": "0.3.0",
   "description": "Measurement utilities for performance tracking and analytics",
   "publishConfig": {
@@ -11,7 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@lql-pg/verify": "workspace:*"
+    "@pgpm/verify": "workspace:*"
   },
   "devDependencies": {
     "@launchql/cli": "^4.9.0"
