--- a/packages/security/default-roles/package.json
+++ b/packages/security/default-roles/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lql-pg/default-roles",
+  "name": "@pgpm/default-roles",
   "version": "0.3.0",
   "description": "Default PostgreSQL role definitions and permissions",
   "publishConfig": {
@@ -11,7 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@lql-pg/verify": "workspace:*"
+    "@pgpm/verify": "workspace:*"
   },
   "devDependencies": {
     "@launchql/cli": "^4.9.0"
