--- a/packages/security/encrypted-secrets-table/package.json
+++ b/packages/security/encrypted-secrets-table/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lql-pg/encrypted-secrets-table",
+  "name": "@pgpm/encrypted-secrets-table",
   "version": "0.3.0",
   "description": "Table-based encrypted secrets storage and retrieval",
   "publishConfig": {
@@ -11,7 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@lql-pg/verify": "workspace:*"
+    "@pgpm/verify": "workspace:*"
   },
   "devDependencies": {
     "@launchql/cli": "^4.9.0"
