Fix branding issues: PGPM→pgpm, revert @pgpm/cli→@launchql/cli, update email to interweb.co
- Changed all PGPM references to lowercase pgpm in documentation and CI
- Reverted @pgpm/cli back to @launchql/cli (the CLI package hasn't been renamed yet)
- Changed email from hello@pgpm.com to hello@interweb.co
- Changed support@pgpm.com to support@interweb.co in test file

Co-Authored-By: Dan Lynch <pyramation@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: PGPM tests
+name: pgpm tests
 on:
   push:
   workflow_dispatch:
@@ -61,8 +61,8 @@ jobs:
       - name: Install
         run: pnpm install
 
-      - name: Install PGPM CLI globally
-        run: npm install -g @pgpm/cli@4.9.0
+      - name: Install pgpm CLI globally
+        run: npm install -g @launchql/cli@4.9.0
 
       - name: Build
         run: pnpm -r build
@@ -162,8 +162,8 @@ jobs:
       - name: Install
         run: pnpm install
 
-      - name: Install PGPM CLI globally
-        run: npm install -g @pgpm/cli@4.9.0
+      - name: Install pgpm CLI globally
+        run: npm install -g @launchql/cli@4.9.0
 
       - name: Build
         run: pnpm -r build
@@ -234,8 +234,8 @@ jobs:
       - name: Install
         run: pnpm install
 
-      - name: Install PGPM CLI globally
-        run: npm install -g @pgpm/cli@4.9.0
+      - name: Install pgpm CLI globally
+        run: npm install -g @launchql/cli@4.9.0
 
       - name: Build
         run: pnpm -r build
