--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pgpm-extensions",
   "version": "0.0.1",
-  "author": "pgpm <hello@pgpm.com>",
+  "author": "pgpm <hello@interweb.co>",
   "private": true,
   "repository": {
     "type": "git",
