--- a/packages/jobs/jobs/package.json
+++ b/packages/jobs/jobs/package.json
@@ -15,7 +15,7 @@
     "@pgpm/verify": "workspace:*"
   },
   "devDependencies": {
-    "@pgpm/cli": "^4.9.0"
+    "@launchql/cli": "^4.9.0"
   },
   "repository": {
     "type": "git",
