--- a/packages/utils/verify/package.json
+++ b/packages/utils/verify/package.json
@@ -11,7 +11,7 @@
     "test:watch": "jest --watch"
   },
   "devDependencies": {
-    "@pgpm/cli": "^4.9.0"
+    "@launchql/cli": "^4.9.0"
   },
   "repository": {
     "type": "git",
