Update to use pgpm@0.2.0 instead of @launchql/cli
- Replaced all @launchql/cli@4.9.0 references with pgpm@0.2.0
- Updated all package.json devDependencies to use pgpm@0.2.0
- Updated CI/CD workflows to install pgpm@0.2.0 globally
- Updated scripts and documentation to reference pgpm@0.2.0
- All commands already using pgpm (not lql) as requested

Co-Authored-By: Dan Lynch <pyramation@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
         run: pnpm install
 
       - name: Install pgpm CLI globally
-        run: npm install -g @launchql/cli@4.9.0
+        run: npm install -g pgpm@0.2.0
 
       - name: Build
         run: pnpm -r build
@@ -163,7 +163,7 @@ jobs:
         run: pnpm install
 
       - name: Install pgpm CLI globally
-        run: npm install -g @launchql/cli@4.9.0
+        run: npm install -g pgpm@0.2.0
 
       - name: Build
         run: pnpm -r build
@@ -235,7 +235,7 @@ jobs:
         run: pnpm install
 
       - name: Install pgpm CLI globally
-        run: npm install -g @launchql/cli@4.9.0
+        run: npm install -g pgpm@0.2.0
 
       - name: Build
         run: pnpm -r build
