--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -69,7 +69,7 @@ jobs:
         run: pnpm install
 
       - name: Install pgpm CLI globally
-        run: npm install -g pgpm@0.2.0
+        run: npm install -g pgpm
 
       - name: Build
         run: pnpm -r build
